--- a/views/stationone.ejs
+++ b/views/stationone.ejs
@@ -35,7 +35,7 @@
             <div class="stationHeader">
       
                 <div class="enContent centerVertical">
-                    <p class="questionText">How important is colonial history to our present day?</p>
+                    <p class="questionText">How important is colonial history to our present day??</p>
                 </div>
                 <div class="esContent centerVertical">
                     <p class="questionText">¿Qué importancia tiene la historia colonial en nuestro presente?</p>
