--- a/views/stationone.ejs
+++ b/views/stationone.ejs
@@ -60,37 +60,21 @@
             <form class="enContent" id="answerFormen" name="answerForm">
                 <div class="radio">
                     <input id="radio-1" name="answerOption" type="radio" value="1">
-                    <label for="radio-1" class="radio-label">Very important</label>
+                    <label for="radio-1" class="radio-label">Yes</label>
                 </div>
                 <div class="radio">
                     <input id="radio-4" name="answerOption" type="radio" value="2">
-                    <label for="radio-4" class="radio-label">Somewhat important</label>
-                </div>
-                <div class="radio">
-                    <input id="radio-2" name="answerOption" type="radio" value="3">
-                    <label for="radio-2" class="radio-label">Slightly important</label>
-                </div>
-                <div class="radio">
-                    <input id="radio-3" name="answerOption" type="radio" value="4">
-                    <label for="radio-3" class="radio-label">Not important at all</label>
+                    <label for="radio-4" class="radio-label">No</label>
                 </div>
             </form>
             <form class="esContent" id="answerFormes" name="answerForm">
                 <div class="radio">
                     <input id="radio-8" name="answerOption" type="radio" value="1">
-                    <label for="radio-8" class="radio-label">Muy importante</label>
+                    <label for="radio-8" class="radio-label">Si</label>
                 </div>
                 <div class="radio">
                     <input id="radio-5" name="answerOption" type="radio" value="2">
-                    <label for="radio-5" class="radio-label">Modestamente importante</label>
-                </div>
-                <div class="radio">
-                    <input id="radio-6" name="answerOption" type="radio" value="3">
-                    <label for="radio-6" class="radio-label">Ligeramente importante</label>
-                </div>
-                <div class="radio">
-                    <input id="radio-7" name="answerOption" type="radio" value="4">
-                    <label for="radio-7" class="radio-label">Para nada importante</label>
+                    <label for="radio-5" class="radio-label">No</label>
                 </div>
             </form>
             <a id="nextStationLink" href="/message"></a>
