--- a/views/selectcountry.ejs
+++ b/views/selectcountry.ejs
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <a id="nextStationLink" href="/print"></a>
-            <select name="foo" class="" id="nationalitySelect">
+            <select multiple=True name="foo" class="" id="nationalitySelect">
                 <option class="selectOption" value="">Nationality</option>
                 <option class='selectOption' value='0'>France</option>
                 <option class='selectOption' value='1'>Netherlands</option>
