--- a/views/selectcountry.ejs
+++ b/views/selectcountry.ejs
@@ -55,7 +55,7 @@
             </div>
             <a id="nextStationLink" href="/print"></a>
             <select multiple=True name="foo" class="" id="nationalitySelect">
-                <option class="selectOption" value="">Nationality</option>
+                <option class="selectOption" value="">Last Names</option>
                 <option class='selectOption' value='0'>Andreson</option>
                 <option class='selectOption' value='1'>Barret</option>
                 <option class='selectOption' value='2'>Buck</option>
