--- a/views/stationthree.ejs
+++ b/views/stationthree.ejs
@@ -35,10 +35,10 @@
             <div class="stationHeader">
 
                 <div class="enContent centerVertical">
-                    <p class="questionText">Do you agree or disagree that the nation-state is a violent institution?</p>
+                    <p class="questionText">What has an affects on your material conditions?</p>
                 </div>
                 <div class="esContent centerVertical">
-                    <p class="questionText">¿Está de acuerdo o en desacuerdo que el estado-nación es una institución violenta?</p>
+                    <p class="questionText">¿Qué afecta sus condiciones materiales?</p>
                 </div>
 
 
@@ -64,22 +64,38 @@
             <form class="enContent" id="answerFormen" name="answerForm">
                 <div class="radio">
                     <input id="radio-1" name="answerOption" type="radio" value="1">
-                    <label for="radio-1" class="radio-label">Agree</label>
+                    <label for="radio-1" class="radio-label">How you see and identify yourself</label>
                 </div>
                 <div class="radio">
                     <input id="radio-2" name="answerOption" type="radio" value="2">
-                    <label for="radio-2" class="radio-label">Disagree</label>
+                    <label for="radio-2" class="radio-label">How other see and identify you</label>
+                </div>
+                 <div class="radio">
+                    <input id="radio-3" name="answerOption" type="radio" value="3">
+                    <label for="radio-3" class="radio-label">Both</label>
+                </div>
+                 <div class="radio">
+                    <input id="radio-4" name="answerOption" type="radio" value="4">
+                    <label for="radio-4" class="radio-label">None of the above</label>
                 </div>
 
             </form>
             <form class="esContent" id="answerFormes" name="answerForm">
                 <div class="radio">
                     <input id="radio-5" name="answerOption" type="radio" value="1">
-                    <label for="radio-5" class="radio-label">De acuerdo</label>
+                    <label for="radio-5" class="radio-label">Cómo te ves e identificas</label>
                 </div>
                 <div class="radio">
                     <input id="radio-6" name="answerOption" type="radio" value="2">
-                    <label for="radio-6" class="radio-label">Desacuerdo</label>
+                    <label for="radio-6" class="radio-label">Como otres te ven e identifican</label>
+                </div>
+                     <div class="radio">
+                    <input id="radio-7" name="answerOption" type="radio" value="3">
+                    <label for="radio-7" class="radio-label">Todo lo anterior</label>
+                </div>
+                <div class="radio">
+                    <input id="radio-8" name="answerOption" type="radio" value="4">
+                    <label for="radio-8" class="radio-label">Ninguna de las anteriores</label>
                 </div>
             </form>
             <a id="nextStationLink" href="/selectcountry"></a>
