--- a/views/stationtwo.ejs
+++ b/views/stationtwo.ejs
@@ -37,7 +37,7 @@
                 <p class="esContent questionText">Seleccione todos los apellidos con los que está relacionado o conoce a alguien con él:</p>
             </div>
             
-            <select multiple=True name="foo" class="" id="nationalitySelect">
+            <select multiple=True name="foo" class="" id="lastNameSelections">
                 <option class="selectOption" value="">Last Names</option>
                 <option class='selectOption' value='0'>Andreson</option>
                 <option class='selectOption' value='1'>Barret</option>
