--- a/views/stationthree.ejs
+++ b/views/stationthree.ejs
@@ -68,7 +68,7 @@
                 </div>
                 <div class="radio">
                     <input id="radio-2" name="answerOption" type="radio" value="2">
-                    <label for="radio-2" class="radio-label">How other see and identify you</label>
+                    <label for="radio-2" class="radio-label">How others see and identify you</label>
                 </div>
                  <div class="radio">
                     <input id="radio-3" name="answerOption" type="radio" value="3">
