--- a/views/stationthree.ejs
+++ b/views/stationthree.ejs
@@ -35,7 +35,7 @@
             <div class="stationHeader">
 
                 <div class="enContent centerVertical">
-                    <p class="questionText">What has an affects on your material conditions?</p>
+                    <p class="questionText">What has an affect on your material conditions?</p>
                 </div>
                 <div class="esContent centerVertical">
                     <p class="questionText">¿Qué afecta sus condiciones materiales?</p>
