--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -263,6 +263,11 @@ flex-direction: row;
   font-size: 73px !important;
 }
 
+#lastNameSelections {
+  font-size: 73px !important;
+}
+
+
 .selectOption{
   font-size: 20px;
 }
