Fixes errors to get app running

--- a/views/selectcountry.ejs
+++ b/views/selectcountry.ejs
@@ -14,11 +14,10 @@
 <script src="/javascripts/jquery.modal.min.js">  </script>
 
 <!-- jQuery Modal -->
-<script src="/javascripts/exhibit.js">  </script>
-<script async src="/javascripts/fp.min.js" onload="initFingerprintJS()"></script>
+
 <link id="theme-sheet" href="/stylesheets/flax.css" rel="stylesheet"/>
 
-<script src="/javascripts/easydropdown.min.js"/>
+<script src="/javascripts/easydropdown.js"/>
 
 
 </script>
@@ -286,6 +285,9 @@
 
     </div>
 </body>
+<script src="/javascripts/exhibit.js">  </script>
+<script async src="/javascripts/fp.min.js" onload="initFingerprintJS()"></script>
+
 <script>
  
 </script>
