--- a/views/stationtwo.ejs
+++ b/views/stationtwo.ejs
@@ -12,9 +12,7 @@
 <script src="/javascripts/jquery.min.js">  </script>
 <script src="/javascripts/jquery.modal.min.js">  </script>
 
-<!-- jQuery Modal -->
-<script src="/javascripts/exhibit.js">  </script>
-<script async src="/javascripts/fp.min.js" onload="initFingerprintJS()"></script>
+
 
 </script>
 
@@ -37,7 +35,7 @@
                 <p class="esContent questionText">Seleccione todos los apellidos con los que está relacionado o conoce a alguien con él:</p>
             </div>
             
-            <select multiple=True name="foo" class="" id="lastNameSelections">
+            <select multiple=True name="foo" class="" id="nationalitySelect">
                 <option class="selectOption" value="">Last Names</option>
                 <option class='selectOption' value='0'>Andreson</option>
                 <option class='selectOption' value='1'>Barret</option>
@@ -113,5 +111,7 @@
 
     </div>
 </body>
-
+<!-- jQuery Modal -->
+<script src="/javascripts/exhibit.js">  </script>
+<script async src="/javascripts/fp.min.js" onload="initFingerprintJS()"></script>
 </html>
