tons more change s

--- a/views/stationtwo.ejs
+++ b/views/stationtwo.ejs
@@ -11,7 +11,16 @@
 </head>
 <script src="/javascripts/jquery.min.js">  </script>
 <script src="/javascripts/jquery.modal.min.js">  </script>
-
+<style>
+select {
+    background: black;
+    border: 1px solid #ccc;
+    
+    color: white;
+    text-shadow: 0 0 4px rgba(0, 0, 0, 0.8);
+    -webkit-appearance: none;
+}
+</style>
 
 
 </script>
