--- a/views/archivePermission.ejs
+++ b/views/archivePermission.ejs
@@ -77,7 +77,7 @@
                 </div>
             </form>
 
-            <a id="nextStationLink" href="/stationone"></a>
+            <a id="nextStationLink" href="/banner"></a>
 
             <div onclick="submitAnswer('archivePermission')" class="submitAnswerButton">
                 <div class="centerVertical">
