--- a/views/billboard_completion.ejs
+++ b/views/billboard_completion.ejs
@@ -14,7 +14,7 @@
 <script src="/javascripts/jquery.modal.min.js">  </script>
 
 <!-- jQuery Modal -->
-<script src="/javascripts/script.js">  </script>
+<script src="/javascripts/exhibit.js">  </script>
 <script async src="/javascripts/fp.min.js" onload="initFingerprintJS()"></script>
 
 </script>
@@ -85,30 +85,30 @@
 
         <form action="/form/submit" method="post">
             <div>
-              <label>United Against The</label>
-              <input type="text" />
+              <label>UNITED AGAINST THE</label>
+              <input id="line1" type="text" />
             </div>
             <div>
-              <label>For The </label>
-              <input type="text" />
+              <label>FOR THE</label>
+              <input id="line2" type="text" />
             </div>
             <div>
-              <label>For The </label>
-              <input type="text" />
+              <label>FOR THE</label>
+              <input id="line3" type="text" />
             </div>
           </form>
 
 
-            <div onclick="registerUser()" class="submitAnswerButton">
-                <div class="centerVertical">
-                    <p class=" optionText" onclick="registerUser()" > <%= submit %> </p>
-                </div>
-                <div class="centerVertical">
-                    <img src="/images/arrow.png" alt="Exhibit Icon" width="70" height="70">
-                </div>
-
-            </div>  
-            <a id="nextStationLink" href="/archivePermission"></a>
+          <div onclick="submitAnswer('banner')" class="submitAnswerButton">
+            <div class="centerVertical">
+                <p class="enContent optionText">Submit Answer </p>
+                <p class="esContent optionText">Enviar </p>
+            </div>
+            <div class="centerVertical">
+                <img src="/images/arrow.png" alt="Exhibit Icon" width="70" height="70">
+            </div>
+        </div>
+        <a id="nextStationLink" href="/message"></a>
         </div>
     </div>
 
