--- a/views/stationtwo.ejs
+++ b/views/stationtwo.ejs
@@ -45,7 +45,7 @@ select {
             </div>
             
             <select multiple=True name="foo" class="" id="nationalitySelect">
-                <option class="selectOption" value="">Last Names</option>
+                <option class="selectOption" value="Last Names">Last Names</option>
                 <option class='selectOption' value='0'>Andreson</option>
                 <option class='selectOption' value='1'>Barret</option>
                 <option class='selectOption' value='2'>Buck</option>
@@ -103,7 +103,7 @@ select {
 
 
             </div>
-            <a id="nextStationLink" href="/message"></a>
+            <a id="nextStationLink" href="/selectcountry"></a>
 
             <div onclick="submitAnswer('stationtwo')" class="submitAnswerButton">
                 <div class="centerVertical">
