--- a/views/billboard_completion.ejs
+++ b/views/billboard_completion.ejs
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="questionContainer fadeInContent">
-            <div class="stationHeader">
+            <div class="billboardStationHeader">
 
                 <div class=" centerVertical">
                     <p class="questionText">During the 1965 U.S.A. intervention in Santo Domingo a street banner read as follow:</p>                
