--- a/views/selectcountry.ejs
+++ b/views/selectcountry.ejs
@@ -21,7 +21,16 @@
 
 
 </script>
-
+<style>
+    select {
+        background: black;
+        border: 1px solid #ccc;
+        
+        color: white;
+        text-shadow: 0 0 4px rgba(0, 0, 0, 0.8);
+        -webkit-appearance: none;
+    }
+    </style>
 <body>
     <div class="App">
 
