updates to format printout

--- a/views/billboard_completion.ejs
+++ b/views/billboard_completion.ejs
@@ -60,12 +60,15 @@
             <div class="billboardStationHeader">
 
                 <div class=" centerVertical">
-                    <p class="questionText">During the 1965 U.S.A. intervention in Santo Domingo a street banner read as follow:</p>                
-                </div>
+                    <p class="enContent questionText">During the 1965 U.S.A. intervention in Santo Domingo a street banner read as follow:</p>                
+                    <p class="esContent questionText">Durante la intervención estadounidense de 1965 en Santo Domingo, una pancarta en la calle decía lo siguiente:</p>                
+
+                  </div>
 
                 <div class=" centerVertical">
-                    <p class="questionText">(Fill in the blanks)</p>
-                </div>
+                    <p class="enContent questionText">(Fill in the blanks)</p>
+                    <p class="esContent questionText">(Completa la frase)</p>
+                  </div>
             </div>
 
             <div id="ex1" class="modal">
@@ -85,15 +88,18 @@
 
         <form action="/form/submit" method="post">
             <div>
-              <label>UNITED AGAINST THE</label>
+              <label class="enContent" >UNITED AGAINST THE</label>
+              <label class="esContent" >FRENTE CONTRA EL </label>
               <input id="line1" type="text" />
             </div>
             <div>
-              <label>FOR THE</label>
+              <label class="enContent" >FOR THE</label>
+              <label class="esContent">POR LA</label>
               <input id="line2" type="text" />
             </div>
             <div>
-              <label>FOR THE</label>
+              <label class="enContent">FOR THE</label>
+              <label class="esContent">POR LA</label>
               <input id="line3" type="text" />
             </div>
           </form>
