Fixes issues with formatter and exhibit

--- a/views/print.ejs
+++ b/views/print.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        <%= title %>
+        print
     </title>
     <link rel='stylesheet' href='/stylesheets/jquery.modal.min.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
@@ -51,13 +51,7 @@
                 </div>
             </div>
 
-            <!-- <form class="enContent" id="answerFormen" name="answerForm">
-                <input class="textInput" id="zipcode" name="answerOption" type="text" placeholder="Your Zipcode:">
-            </form>
-            
-            <form class="esContent" id="answerFormes" name="answerForm">
-                <input class="textInput" id="zipcode" name="answerOption" type="text" placeholder="Your Zipcode:">
-            </form> -->
+             
             <div onclick="submitAnswer('print')" class="submitAnswerButton">
                 <div class="enContent centerVertical">
                     <p class="optionText">Print </p>
