--- a/views/selectcountry.ejs
+++ b/views/selectcountry.ejs
@@ -45,9 +45,10 @@
             </div>
         </div>
         <div class="questionContainer fadeInContent">
-            <div class="stationHeader">
-                
-                </div>
+            <div class="selectCountryStationHeader">
+                <p class="enContent questionText">Select your:</p>
+                <p class="esContent questionText">Seleccione su:</p>
+            </div>
         
             <div id="ex1" class="modal">
                 <div class="modalBody centerVertical">
