--- a/views/stationone.ejs
+++ b/views/stationone.ejs
@@ -35,10 +35,10 @@
             <div class="stationHeader">
       
                 <div class="enContent centerVertical">
-                    <p class="questionText">Do you know or have heard of any of the suspects and witnesses?</p>
+                    <p class="questionText">Do you know or have heard of any of the witnesses Anna Murray and Doña Bertilia? </p>
                 </div>
                 <div class="esContent centerVertical">
-                    <p class="questionText">¿Conoce usted o ha oído hablar de alguno de los sospechosos o testigos?</p>
+                    <p class="questionText">¿Conoce usted o ha oído hablar de alguno de los testigos Anna Murray y Doña Bertilia?</p>
                 </div>
             </div>
             <div id="ex2" class="modal">
